fix: scrollbar background

--- a/client/src/components/layouts/FilePreviewListLayout/index.scss
+++ b/client/src/components/layouts/FilePreviewListLayout/index.scss
@@ -65,6 +65,7 @@
         }
         &.selected {
           @include themed('background-color', 'selectedColor');
+          @include themed('color', 'selectedTextColor');
         }
         .thumb {
           margin-right: 10px;
